feat: Add signup functionality with token generation
- Implemented user signup handling in auth.controller.js
- Created functionality for user creation and token generation
- Sent token and user data as a response
- Added utility functions in utils.js for authentication

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
-  "type":"module",
+  "type": "module",
   "license": "ISC",
   "description": "",
   "dependencies": {
