--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
 MONGODB_URI=mongodb+srv://dilmiishara2000:lOlDOrNIpajqXJ3G@cluster0.4tonz.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=5002
-
-#lOlDOrNIpajqXJ3G
+JWT_SECRET =myscretkey
