Implement authentication features: login, logout, update profile picture, and check auth functions in auth.controller.js. Add protectRoute middleware for route protection in auth.middleware.js.

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
 MONGODB_URI=mongodb+srv://dilmiishara2000:lOlDOrNIpajqXJ3G@cluster0.4tonz.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=5002
 JWT_SECRET =myscretkey
+
+CLOUDINAR_CLOUD_NAME=dbjm4mrqg
+CLOUDINARY_API_KEY=484556562521985
+CLOUDINARY_API_SECRET=cj-Jg3gEWW7OM-1DZy4nr0zpy5w
+
